@@ -59,6 +59,7 @@ Changes:
 - Add VM timer workaround.
 - Add useful PHP modules.
 - Add php wrapper for webserver.
+- Add sockstat to Diagnostics|Information|Sockets.
 - Use SCSI inquiry for model and serial.
 - Upgrade istgt to 20121028.
 - Upgrade isboot to 0.2.6.
